# signatory

./: Cargo.toml
.github/workflows/: rust.yml
signatory-sgx/: Cargo.toml  README.md
signatory-sgx-app/: Cargo.toml
signatory-sgx/example/: client.rs  logger.rs
signatory-sgx/src/: backend.rs  error.rs  lib.rs  protocol.rs  provider.rs  seal_data.rs  seal_signer.rs  signer.rs
signatory-sgx/src/server/: mod.rs  runner.rs
