[package]
name        = "signatory-sgx"
description = "Signatory Ed25519 provider for *sgx*"
version     = "0.16.0" # Also update html_root_url in lib.rs when bumping this
license     = "Apache-2.0 OR MIT"
authors     = ["Linfeng Yuan <linfeng@crypto.com>"]
homepage    = "https://github.com/crypto-com/signatory"
repository  = "https://github.com/crypto-com/signatory/tree/develop/providers/signatory-sgx/"
readme      = "README.md"
categories  = ["authentication", "cryptography", "no-std"]
keywords    = ["cryptography", "ed25519", "ring", "signatures", "sgx", "enclave"]
edition     = "2018"


[dependencies]
log = "0.4.8"
bincode = { version = "1.2" }
serde = { version = "1.0", features = ["derive"] }
sgx-isa = { version = "0.2", features = ["sgxstd"] }

# privider
subtle-encoding = { version = "0.5", optional = true }
structopt = { version = "0.3", optional = true }
env_logger = { version = "0.7", optional = true }
signatory = { path = "..", default-features = false, features = ["std", "ed25519", "getrandom"] }


# backend
rand = { version = "0.6.4", optional = true }
aead = {version = "0.1", optional = true }
aes-gcm-siv = { version = "0.2", optional = true }
signatory-dalek = { path = "../signatory-dalek", optional = true }

[[bin]]
name = "server"
path = "example/server.rs"
test = false

[[bin]]
name = "client"
path = "example/client.rs"
test = false

[features]
default = ["std"]
sgx = ["rand", "aead", "aes-gcm-siv", "signatory-dalek"]
std = ["subtle-encoding", "structopt", "env_logger"]

