[package]
name        = "signatory-sgx"
description = "Signatory Ed25519 provider for *sgx*"
version     = "0.16.0" # Also update html_root_url in lib.rs when bumping this
license     = "Apache-2.0 OR MIT"
authors     = ["Linfeng Yuan <linfeng@crypto.com>"]
homepage    = "https://github.com/crypto-com/signatory"
repository  = "https://github.com/crypto-com/signatory/tree/develop/providers/signatory-sgx/"
readme      = "README.md"
categories  = ["authentication", "cryptography", "no-std"]
keywords    = ["cryptography", "ed25519", "ring", "signatures", "sgx", "enclave"]
edition     = "2018"


[dependencies]
log = "0.4.8"
bincode = { version = "1.2" }
serde = { version = "1.0", features = ["derive"] }
sgx-isa = { version = "0.2", features = ["sgxstd"] }

# privider
signatory = { path = "..", default-features = false, features = ["std", "ed25519", "getrandom"] }
subtle-encoding = { version = "0.5", optional = true }
enclave-runner = { version = "0.2", optional = true }
sgxs-loaders = { version = "0.2", optional = true }
aesm-client = {version = "0.2", features = ["sgxs"] , optional = true }
crossbeam-channel = { version = "0.4", optional = true}


# backend
rand = { version = "0.6.4", optional = true }
aead = { version = "0.1", optional = true }
aes-gcm-siv = { version = "0.2", optional = true }
signatory-dalek = { path = "../signatory-dalek", optional = true }

[workspace]
members = [
    "bin/cmd",
    "bin/sgx_app",
]

[features]
default = ["std"]
sgx = ["rand", "aead", "aes-gcm-siv", "signatory-dalek"]
std = ["subtle-encoding", "enclave-runner", "sgxs-loaders", "aesm-client", "crossbeam-channel"]